--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ src="https://www.facebook.com/tr?id=723351853890720&ev=PageView&noscript=1"
             <p class="paragraph">⭐TIPPING  KA BAAP ⭐</p>
         </div>
         <div class="button">
-            <a href="https://t.me/+wHbI5Vxg38xiMWY9" class="button4">
+            <a href="https://t.me/+3y2h9KNg_HYwZTA1" class="button4">
                 JOIN NOW FOR FREE <i class="fa-brands fa-telegram " aria-hidden="true"></i></a>
         </div>
         <div class="counter">FREE JOINING ENDS IN...<span id="countdown">20</span></div>
